--- a/web/template/mainPage.html
+++ b/web/template/mainPage.html
@@ -13,8 +13,7 @@
       <div class="dropdown">
           <button class="dropbtn">Add new</button>
           <div class="dropdown-content">
-            <a onclick = "createItem()">Medicine</a>
-            <a onclick = "createItem()">Surgical instrument</a>
+            <a onclick = "createItem()">Drug/Surgical Instrument</a>
             <a onclick = "createRoom()">Storage Facility</a>
           </div>
         </div>
