changed to maximise server efficiency

--- a/web/template/signup.html
+++ b/web/template/signup.html
@@ -7,6 +7,7 @@
   <body>
     <div class="center-outside">
       <div class="center-div">
+        <form action="/signup" method="post">
           Username<br>
           <input type="text" name="user" autocomplete="off" required><br>
           Password<br>
@@ -32,8 +33,8 @@
           <input type="number" name="age" autocomplete="off" min="0" step="1" required>
           <br><br>
           <input type="submit" value="Submit">
+        </form>
       </div>
     </div>
-    <script src="../static/js/signUp.js"></script>
   </body>
 </html>
