--- a/web/template/login.html
+++ b/web/template/login.html
@@ -9,15 +9,16 @@
 <body>
   <div class="center-outside">
     <div class="center-div">
-      Username<br>
-      <input type="text" name="user"></input>
-      <br>Password<br>
-      <input type="password" name="pass"></input>
-      <br><br>
-      <input type="submit" value="Submit"></input>
-      <a href="/signup">Sign Up</a>
+      <form action="/login" method="post">
+        Username<br>
+        <input type="text" name="user"></input>
+        <br>Password<br>
+        <input type="password" name="pass"></input>
+        <br><br>
+        <input type="submit" value="Submit"></input>
+        <a href="/signup">Sign Up</a>
+      </form>
     </div>
   </div>
-  <script src="../static/js/signUp.js"></script>
 </body>
 </html>
