--- a/web/template/mainPage.html
+++ b/web/template/mainPage.html
@@ -13,8 +13,8 @@
       <div class="dropdown">
           <button class="dropbtn">Add new</button>
           <div class="dropdown-content">
-            <a onclick = "createItem()">Drug/Surgical Instrument</a>
-            <a onclick = "createRoom()">Storage Facility</a>
+            <a onclick = "createItem(null)">Drug/Surgical Instrument</a>
+            <a onclick = "createRoom(null)">Storage Facility</a>
           </div>
         </div>
     </div>
