case sensitive mistake was dumb af

--- a/web/templates/signup.html
+++ b/web/templates/signup.html
@@ -7,7 +7,7 @@
   <body>
     <div class="center-outside">
       <div class="center-div">
-        <form action="/signup" method="post">
+        <form action="/signup" method="POST">
           Username<br>
           <input type="text" name="user" autocomplete="off" required><br>
           Password<br>
