--- a/web/templates/mainPage.html
+++ b/web/templates/mainPage.html
@@ -13,8 +13,8 @@
       <div class="dropdown">
           <button class="dropbtn">Add new</button>
           <div class="dropdown-content">
-            <a onclick = "createItem(null)">Drug/Surgical Instrument</a>
-            <a onclick = "createRoom(null)">Storage Facility</a>
+            <a onclick = "createItem()">Drug/Surgical Instrument</a>
+            <a onclick = "createRoom(null, [new Item('4', '4', '4', '4'), new Item('4', '4', '4', '4')])">Storage Facility</a>
           </div>
         </div>
     </div>
