--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -6,6 +6,18 @@ select {
   font-size:14px;
 }
 
+html {
+  height: 100px;
+}
+body {
+  height: 100px;
+  margin: 0;
+  padding: 4;
+}
+.map {
+  height: 300px;
+}
+
 select:focus {
   outline: none;
 }
@@ -108,8 +120,4 @@ a {
 .ignore-css
 {
     all:unset;
-}
-#map {
-  height: 100;
-  width: 100;
 }
