--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>Login</title>
-  <meta charset = "utf-8"></meta>
+  <meta charset = "utf-8" name="viewport" content="initial-scale=1.0"></meta>
   <script src="https://www.google.com/jsapi"></script>
   <link rel="stylesheet" href="../static/css/main.css">
   <link rel="stylesheet" href="../static/css/mainMain.css">
