added some stuff

--- a/web/templates/mainPage.html
+++ b/web/templates/mainPage.html
@@ -14,7 +14,7 @@
           <button class="dropbtn">Add new</button>
           <div class="dropdown-content">
             <a onclick = "createItem()">Drug/Surgical Instrument</a>
-            <a onclick = "createRoom(null, [new Item('4', '4', '4', '4'), new Item('4', '4', '4', '4')])">Storage Facility</a>
+            <a onclick = "createRoom(null, null)">Storage Facility</a>
           </div>
         </div>
     </div>
