--- a/web/templates/createItem.html
+++ b/web/templates/createItem.html
@@ -34,7 +34,7 @@
       </select>
       <br><br>
       <label for = "qty">Quantity of Item: </label>
-      <input name = "qty" style = "width: 300" type = "number" placeholder="Enter the quantity of item"></input>
+      <input id = "qty" name = "qty" style = "width: 300" type = "number" placeholder="Enter the quantity of item"></input>
       <br><br>
 
       <button id = "create" onclick = "addItemToScreen()">Add item</button>
