changed some stuff

--- a/web/templates/createItem.html
+++ b/web/templates/createItem.html
@@ -5,10 +5,12 @@
   <script src="https://www.google.com/jsapi"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <link rel="icon" href="../static/images/hospi.png">
   <link rel="stylesheet" href="../static/css/main.css">
   <link rel="stylesheet" href="../static/css/mainMain.css">
 </head>
 <body onload = "initialize()">
+  <img src = "../static/images/hospi.png">
   <div class="center-outside" style = "width: 100%;">
     <div class="center-div" style = "width: 100%;">
       <label for = "nameIn">Name of Item: </label>
