--- a/web/templates/mainPage.html
+++ b/web/templates/mainPage.html
@@ -3,10 +3,12 @@
   <title>Resources</title>
   <meta charset = "utf-8"></meta>
   <script src="https://www.google.com/jsapi"></script>
+  <link rel="icon" href="../static/images/hospi.png">
   <link rel="stylesheet" href="../static/css/main.css">
   <link rel="stylesheet" href="../static/css/mainMain.css">
 </head>
 <body>
+  <img src = "../static/images/hospi.png">
   <br>
   <div class = "header">
     <div class = "center">
