--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -3,11 +3,13 @@
 <head>
   <title>Login</title>
   <meta charset = "utf-8" name="viewport" content="initial-scale=1.0"></meta>
+  <link rel="icon" href="../static/images/hospi.png">
   <script src="https://www.google.com/jsapi"></script>
   <link rel="stylesheet" href="../static/css/main.css">
   <link rel="stylesheet" href="../static/css/mainMain.css">
 </head>
 <body>
+  <img src = "../static/images/hospi.png">
   <div class="center-outside">
     <div class="center-div">
       <form action="/login" method="post">
