--- a/web/templates/signup.html
+++ b/web/templates/signup.html
@@ -1,10 +1,12 @@
 <html>
   <head>
     <title>Signup</title>
+    <link rel="icon" href="../static/images/hospi.png">
     <link rel="stylesheet" href="../static/css/main.css">
     <link rel="stylesheet" href="../static/css/mainMain.css">
   </head>
   <body>
+    <img src = "../static/images/hospi.png">
     <div class="center-outside">
       <div class="center-div">
         <form action="/signup" method="POST">
